2010-02-03  Vladimir Makarov  <vmakarov@redhat.com>

PR rtl-optimizations/42941
	* sched-deps.c (setup_insn_reg_pressure_info): Use xcalloc instead
	of xmalloc.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156472 138bc75d-0d04-0410-961f-82ee72b054a4